defaultCommon.css/darkstyle.css: fix top alignment for column (Forum #16022)
git-svn-id: svn://svn.code.sf.net/p/fhem/code/trunk@9832 2b470e98-0d58-463d-a4d8-8e2adae1ed80

--- a/fhem/www/pgm2/defaultCommon.css
+++ b/fhem/www/pgm2/defaultCommon.css
@@ -18,7 +18,7 @@ table.block tr.sel { background: #F0F0D8; }
 table { border-radius:8px; }
 table.room { border:1px solid gray; width: 100%; background: #D7FFFF; }
 table.room tr.sel { background: #A0FFFF; }
-tr.column td { padding:0; vertical-align:top;}
+tr.column > td { padding:0; vertical-align:top;}
 .changed a, .changed { color:red; }
 .col2 { text-align:center; }
 
